--- a/VRVoicePrototypes/VRVoicePrototypes.csproj
+++ b/VRVoicePrototypes/VRVoicePrototypes.csproj
@@ -276,6 +276,7 @@
     <Compile Include="Assets\Pitch Detection Full Source Code\PitchDsp.cs" />
     <Compile Include="Assets\Pitch Detection Full Source Code\PitchTracker.cs" />
     <Compile Include="Assets\Pitch Detection Full Source Code\simple template scene\template.cs" />
+    <Compile Include="Assets\poortScript.cs" />
     <Compile Include="Assets\PostProcessing\Runtime\Attributes\GetSetAttribute.cs" />
     <Compile Include="Assets\PostProcessing\Runtime\Attributes\MinAttribute.cs" />
     <Compile Include="Assets\PostProcessing\Runtime\Attributes\TrackballAttribute.cs" />
